--- a/history.txt
+++ b/history.txt
@@ -61,3 +61,4 @@
 2017/08/01  Single .html page for output
 2017/08/04  Add the date each user page was modified
 2017/08/06  New Tildebox: tilde.team
+2017/08/11  New Tildebox: myrtle-st.club
